--- a/index.html
+++ b/index.html
@@ -9,38 +9,45 @@
     <!-- <script src="js/result.js" defer></script> -->
   </head>
   <body>
-    <div class = "answerBar"></div>
-    <section class = "row">
-      <div class = "button" id = "specButton">%</div>
-      <div class = "button" id = "specButton">x</div>
-      <div class = "button" id = "specButton">—</div>
-      <div class = "button" id = "specButton">+</div>
+    <section class = "container">
+      <div class = "answerBar">
+        <span class = "result">0</span>
+      </div>
+      <div class = "answerBar" id = "navBar">
+        <div class = "button" id = "dark">^</div>
+        <div class = "button" id = "dark">v</div>
+        <div class = "button" id = "dark">c</div>
+      </div>
     </section>
     <section class = "grid">
       <section class = "row">
         <div class = "button">7</div>
         <div class = "button">8</div>
         <div class = "button">9</div>
+        <div class = "button" id = "specButton">%</div>
       </section>
       <section class = "row">
         <div class = "button">4</div>
         <div class = "button">5</div>
         <div class = "button">6</div>
+        <div class = "button" id = "specButton">x</div>
       </section>
       <section class = "row">
         <div class = "button">1</div>
         <div class = "button">2</div>
         <div class = "button">3</div>
+        <div class = "button" id = "specButton">—</div>
       </section>
       <section class = "row">
-        <div class = "fatButton">0</div>
-        <div button = "button">.</div>
+        <div class = "button">0</div>
+        <div class = "button">•</div>
         <div class = "button">+/-</div>
+        <div class = "button" id = "specButton">+</div>
       </section>
-    </section>
-    <section class = "bottomRow">
-      <div class = "button">AC</div>
-      <div class = "button">=</div>
+      <section class = "row">
+        <!-- <div class = "fatButton" id = "specButton">Clear</div> -->
+        <div class = "fatButton" id = "enter">=</div>
+      </section>
     </section>
   </body>
 </html>
