--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Basic Calculator</title>
     <link rel="stylesheet" href="style.css"/>
     <!-- <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet"> -->
-    <!-- <script src="js/result.js" defer></script> -->
+    <script src="script.js" defer></script>
   </head>
   <body>
     <section class = "container">
@@ -14,39 +14,38 @@
         <span class = "result">0</span>
       </div>
       <div class = "answerBar" id = "navBar">
-        <div class = "button" id = "dark">^</div>
-        <div class = "button" id = "dark">v</div>
-        <div class = "button" id = "dark">c</div>
+        <div class = "button up" id = "dark">^</div>
+        <div class = "button down" id = "dark">v</div>
+        <div class = "button clear" id = "dark">c</div>
       </div>
     </section>
     <section class = "grid">
       <section class = "row">
-        <div class = "button">7</div>
-        <div class = "button">8</div>
-        <div class = "button">9</div>
-        <div class = "button" id = "specButton">%</div>
+        <div class = "button seven">7</div>
+        <div class = "button eight">8</div>
+        <div class = "button nine">9</div>
+        <div class = "button divide" id = "specButton">%</div>
       </section>
       <section class = "row">
-        <div class = "button">4</div>
-        <div class = "button">5</div>
-        <div class = "button">6</div>
-        <div class = "button" id = "specButton">x</div>
+        <div class = "button four">4</div>
+        <div class = "button five">5</div>
+        <div class = "button six">6</div>
+        <div class = "button multiply" id = "specButton">x</div>
       </section>
       <section class = "row">
-        <div class = "button">1</div>
-        <div class = "button">2</div>
-        <div class = "button">3</div>
-        <div class = "button" id = "specButton">—</div>
+        <div class = "button one">1</div>
+        <div class = "button two">2</div>
+        <div class = "button three">3</div>
+        <div class = "button subtract" id = "specButton">—</div>
       </section>
       <section class = "row">
-        <div class = "button">0</div>
-        <div class = "button">•</div>
-        <div class = "button">+/-</div>
-        <div class = "button" id = "specButton">+</div>
+        <div class = "button zero">0</div>
+        <div class = "button decimal">•</div>
+        <div class = "button sign">+/-</div>
+        <div class = "button add" id = "specButton">+</div>
       </section>
       <section class = "row">
-        <!-- <div class = "fatButton" id = "specButton">Clear</div> -->
-        <div class = "fatButton" id = "enter">=</div>
+        <div class = "fatButton equal">=</div>
       </section>
     </section>
   </body>
