before font resizing and flexbox

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div class = "answerBar" id = "navBar">
         <div class = "button up" id = "dark">^</div>
         <div class = "button down" id = "dark">v</div>
-        <div class = "button clear" id = "dark">c</div>
+        <div class = "button" id = "dark"></div>
+        <div class = "button clear" id = "dark">clear</div>
       </div>
     </section>
     <section class = "grid">
@@ -23,19 +24,19 @@
         <div class = "button seven">7</div>
         <div class = "button eight">8</div>
         <div class = "button nine">9</div>
-        <div class = "button divide" id = "specButton">%</div>
+        <div class = "button divide" id = "specButton">÷</div>
       </section>
       <section class = "row">
         <div class = "button four">4</div>
         <div class = "button five">5</div>
         <div class = "button six">6</div>
-        <div class = "button multiply" id = "specButton">x</div>
+        <div class = "button multiply" id = "specButton">×</div>
       </section>
       <section class = "row">
         <div class = "button one">1</div>
         <div class = "button two">2</div>
         <div class = "button three">3</div>
-        <div class = "button subtract" id = "specButton">—</div>
+        <div class = "button subtract" id = "specButton">-</div>
       </section>
       <section class = "row">
         <div class = "button zero">0</div>
